add maven opts hotspot